@@ -122,6 +122,11 @@
     }
 }
 
+input[type='number'] {
+    text-align: right;
+    text-align: end;
+}
+
 input[type='color'] {
     .btn {
         height: @line-height-base;
